# internal/api/routers/tournament.router.go
@@ -3,19 +3,23 @@ package routers
 import (
 	"github.com/gofiber/fiber/v2"
 	"tiktok-arena/internal/api/controllers"
-	"tiktok-arena/internal/api/middleware"
 )
 
 func NewTournamentRouter(c *controllers.TournamentController) func(router fiber.Router) {
 	return func(router fiber.Router) {
 		router.Get("", c.GetAllTournaments)
 		router.Get("/contest/:tournamentId", c.GetTournamentContest)
-		router.Post("/create", middleware.Protected(), c.CreateTournament)
-		router.Put("/edit/:tournamentId", middleware.Protected(), c.EditTournament)
-		router.Delete("/delete/:tournamentId", middleware.Protected(), c.DeleteTournament)
-		router.Delete("/delete", middleware.Protected(), c.DeleteTournaments)
 		router.Get("/tiktoks/:tournamentId", c.GetTournamentStats)
 		router.Get("/:tournamentId", c.GetTournamentDetails)
-		router.Put("/:tournamentId", c.TournamentWinner)
+		router.Put("/winner/:tournamentId", c.TournamentWinner)
+	}
+}
+
+func NewTournamentProtectedRouter(c *controllers.TournamentController) func(router fiber.Router) {
+	return func(router fiber.Router) {
+		router.Post("/create", c.CreateTournament)
+		router.Put("/edit/:tournamentId", c.EditTournament)
+		router.Delete("/delete/:tournamentId", c.DeleteTournament)
+		router.Delete("/delete", c.DeleteTournaments)
 	}
 }
